first cut at saving cell timing.

--- a/tests/notebooks/collection/result1.ipynb
+++ b/tests/notebooks/collection/result1.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "papermill": {},
     "tags": [
      "parameters"
     ]
@@ -13,7 +12,7 @@
    "source": [
     "# Parameters\n",
     "foo = 1\n",
-    "bar = \"Hello World!\"\n"
+    "bar = \"hello\"\n"
    ]
   },
   {
@@ -106,10 +105,10 @@
   "papermill": {
    "environment_variables": {},
    "metrics": {
-    "duration": 3.6040260791778564
+    "duration": 2.250469923019409
    },
    "parameters": {
-    "bar": "Hello World!",
+    "bar": "hello",
     "foo": 1
    },
    "version": "0.4+2.ge10f94c.dirty"
